style(i18n): fix comma and dot style

--- a/src/i18n/locales/in/platform.json
+++ b/src/i18n/locales/in/platform.json
@@ -1,27 +1,27 @@
 {
-  "efficientAndFreeTrading": "Pengalaman perdagangan yang efisien dan gratis dimulai dengan platform perdagangan yang kuat dan adil， intuitif dan mudah digunakan， mendukung berbagai jenis pesanan， penempatan pesanan sekali klik， dan alat pembuatan bagan.",
+  "efficientAndFreeTrading": "Pengalaman perdagangan yang efisien dan gratis dimulai dengan platform perdagangan yang kuat dan adil, intuitif dan mudah digunakan, mendukung berbagai jenis pesanan, penempatan pesanan sekali klik, dan alat pembuatan bagan.",
   "personalTradingIndicators": "Indikator perdagangan pribadi",
-  "MT4ProvidesSimpleAndEasyToUse": "MT4 menyediakan alat sederhana dan mudah digunakan untuk merumuskan indikator perdagangan pribadi sesuai dengan gaya perdagangan Anda， dan dapat dengan mudah menerapkan transaksi melalui pustaka indikator eksklusif， skrip， dan Penasihat Ahli.",
+  "MT4ProvidesSimpleAndEasyToUse": "MT4 menyediakan alat sederhana dan mudah digunakan untuk merumuskan indikator perdagangan pribadi sesuai dengan gaya perdagangan Anda, dan dapat dengan mudah menerapkan transaksi melalui pustaka indikator eksklusif, skrip, dan Penasihat Ahli.",
   "advancedChartTools": "Alat grafik tingkat lanjut",
-  "MT4Provides31Chart": "MT4 menyediakan 31 alat analisis grafik dan 30 indikator perdagangan yang berbeda， Anda dapat mengatur setiap indikator dan kategori grafik， menetapkan parameter dan metode tampilan yang sesuai untuk Anda， sehingga Anda bisa mendapatkan pengalaman perdagangan yang memuaskan.",
+  "MT4Provides31Chart": "MT4 menyediakan 31 alat analisis grafik dan 30 indikator perdagangan yang berbeda, Anda dapat mengatur setiap indikator dan kategori grafik, menetapkan parameter dan metode tampilan yang sesuai untuk Anda, sehingga Anda bisa mendapatkan pengalaman perdagangan yang memuaskan.",
   "diversifiedInvestmentTransactions": "Transaksi investasi yang beragam",
-  "theBestWayToManageRisk": "Cara terbaik untuk mengelola risiko adalah dengan mendiversifikasi investasi。 Di platform perdagangan MT4 WCG， Anda dapat memilih dari serangkaian produk perdagangan dan pasar untuk memperkuat dan mendiversifikasi investasi Anda.",
+  "theBestWayToManageRisk": "Cara terbaik untuk mengelola risiko adalah dengan mendiversifikasi investasi. Di platform perdagangan MT4 WCG, Anda dapat memilih dari serangkaian produk perdagangan dan pasar untuk memperkuat dan mendiversifikasi investasi Anda.",
   "intuitiveAndEasyToUse": "Intuitif dan mudah digunakan",
-  "completeAndComprehensiveReports": "Laporan lengkap dan komprehensif， seperti nomor pelacakan， harga pembukaan， volume transaksi， status akun semua pesanan dan informasi lengkap tentang posisi， dapat disediakan di jendela terminal。 Anda dapat melihat informasi pasar waktu nyata kapan saja， di mana saja， untuk membantu Anda membuat keputusan perdagangan yang rasional。 Lebih banyak dukungan untuk perdagangan cerdas (EA) dan sistem pengujian kembali strategi， untuk memberi Anda fleksibilitas， pengawasan， dan kontrol perdagangan tingkat tinggi.",
+  "completeAndComprehensiveReports": "Laporan lengkap dan komprehensif, seperti nomor pelacakan, harga pembukaan, volume transaksi, status akun semua pesanan dan informasi lengkap tentang posisi, dapat disediakan di jendela terminal. Anda dapat melihat informasi pasar waktu nyata kapan saja, di mana saja, untuk membantu Anda membuat keputusan perdagangan yang rasional. Lebih banyak dukungan untuk perdagangan cerdas (EA) dan sistem pengujian kembali strategi, untuk memberi Anda fleksibilitas, pengawasan, dan kontrol perdagangan tingkat tinggi.",
   "automaticAdaptabilityAndScalability": "Adaptasi dan skalabilitas otomatis",
-  "throughTheFurtherDevelopment": "Melalui pengembangan lebih lanjut dari program API， WCG MT4 dapat diintegrasikan secara sempurna dengan peralatan perdagangan Anda yang ada。 Di mana pun Anda berada di penjuru dunia mana pun， Anda selalu dapat mengakses platform perdagangan Anda untuk menyesuaikan indikator Anda， menjalankan instruksi， dan mengeksekusi transaksi。 ， Tetapkan harga batas， perintah hentikan kerugian， dan lacak tren pasar untuk memastikan bahwa Anda tidak akan melewatkan peluang perdagangan dan informasi pasar penting bahkan ketika Anda berada di luar ruangan.",
+  "throughTheFurtherDevelopment": "Melalui pengembangan lebih lanjut dari program API, WCG MT4 dapat diintegrasikan secara sempurna dengan peralatan perdagangan Anda yang ada. Di mana pun Anda berada di penjuru dunia mana pun, Anda selalu dapat mengakses platform perdagangan Anda untuk menyesuaikan indikator Anda, menjalankan instruksi, dan mengeksekusi transaksi. , Tetapkan harga batas, perintah hentikan kerugian, dan lacak tren pasar untuk memastikan bahwa Anda tidak akan melewatkan peluang perdagangan dan informasi pasar penting bahkan ketika Anda berada di luar ruangan.",
   "downloadWCGMT4TradingPlatform": "Unduh platform perdagangan WCG MT4",
-  "leadingTradingAndNetworkTechnology": "Teknologi perdagangan dan jaringan terkemuka， dengan semua alat yang Anda butuhkan， memberi Anda pengalaman perdagangan terbaik",
+  "leadingTradingAndNetworkTechnology": "Teknologi perdagangan dan jaringan terkemuka, dengan semua alat yang Anda butuhkan, memberi Anda pengalaman perdagangan terbaik",
   "forPC": "MT4 untuk PC",
   "forMac": "MT4 untuk Mac",
   "multiAccountManagementSystem": "Sistem manajemen multi-akun MT4",
   "forIPhone": "MT4 untuk iPhone",
   "forAndroid": "MT4 untuk Android",
   "MT4PcVersion": "Versi PC MT4",
-  "MetaTrader4IsTheMostPopular": "MetaTrader 4 adalah platform perdagangan online paling populer di dunia dan telah menetapkan posisi terdepan di industri selama bertahun-tahun。 MetaTrader 4 (MT4) dirancang khusus untuk transaksi valuta asing dan berjangka。 Pedagang dapat menganalisis tren pasar， menggambar grafik perdagangan， dan mengelola posisi dan pesanan mereka melalui antarmuka pengguna yang intuitif dan fungsi yang lengkap.",
+  "MetaTrader4IsTheMostPopular": "MetaTrader 4 adalah platform perdagangan online paling populer di dunia dan telah menetapkan posisi terdepan di industri selama bertahun-tahun. MetaTrader 4 (MT4) dirancang khusus untuk transaksi valuta asing dan berjangka. Pedagang dapat menganalisis tren pasar, menggambar grafik perdagangan, dan mengelola posisi dan pesanan mereka melalui antarmuka pengguna yang intuitif dan fungsi yang lengkap.",
   "downloadImmediately": "Unduh segera",
   "comprehensiveTechnicalAnalysisFunction": "Fungsi analisis teknis yang komprehensif",
-  "professionalIconFunctions": "Fungsi ikon profesional， indikator perdagangan， perdagangan cerdas (EA)， dll。， Dapat diterapkan ke semua pedagang dengan tingkat pengalaman yang berbeda。 Memungkinkan Anda mengikuti perkembangan terkini dalam margin valuta asing global dan pasar kontrak untuk perbedaan (CFD)， dan melakukan transaksi profesional kapan saja， di mana saja melalui WCG MT4.",
+  "professionalIconFunctions": "Fungsi ikon profesional, indikator perdagangan, perdagangan cerdas (EA), dll., Dapat diterapkan ke semua pedagang dengan tingkat pengalaman yang berbeda. Memungkinkan Anda mengikuti perkembangan terkini dalam margin valuta asing global dan pasar kontrak untuk perbedaan (CFD), dan melakukan transaksi profesional kapan saja, di mana saja melalui WCG MT4.",
   "automaticChartingRecords": "Catatan charting otomatis",
   "selfDefinedTechnicalIndicators": "Indikator teknis yang ditentukan sendiri",
   "supportMultipleWindows": "Mendukung multi window",
@@ -38,22 +38,22 @@
   "downloadTheWCGMT4": "Unduh platform perdagangan MT4 WCG sekarang",
   "usingMT4AllowsYou": "Menggunakan MT4 memungkinkan Anda untuk memantau pasar lebih akurat, mengelola posisi Anda dengan cepat dan efisien, mengoptimalkan strategi perdagangan, meningkatkan keuntungan perdagangan Anda, dan menikmati pengalaman perdagangan yang sempurna.",
   "tradingSystem": "Sistem perdagangan",
-  "includesCurrentPriceExecution": "Termasuk eksekusi harga saat ini， perdagangan di kedua arah， empat jenis order tertunda dan dua perintah stop-loss dan fungsi trailing stop-loss。 Fungsi perdagangan satu klik memungkinkan Anda mengirim perintah perdagangan langsung dari grafik dengan satu klik。 Grafik kutipan bawaan memberikan cara yang akurat untuk menilai waktu transaksi.",
+  "includesCurrentPriceExecution": "Termasuk eksekusi harga saat ini, perdagangan di kedua arah, empat jenis order tertunda dan dua perintah stop-loss dan fungsi trailing stop-loss. Fungsi perdagangan satu klik memungkinkan Anda mengirim perintah perdagangan langsung dari grafik dengan satu klik. Grafik kutipan bawaan memberikan cara yang akurat untuk menilai waktu transaksi.",
   "technicalAnalysis": "Analisis teknis",
-  "MT4ProvidesAMoreComprehensive": "MT4 memberikan peluang analisis yang lebih komprehensif。 Setiap produk perdagangan dapat menampilkan sembilan kerangka waktu， memungkinkan pedagang untuk melihat dinamika harga secara rinci。 Gabungkan alat-alat ini untuk menentukan tren pasar， dan kemampuan analisis yang kuat membantu Anda menganalisis tren pasar secara lebih menyeluruh dan menangkap momen terbaik.",
+  "MT4ProvidesAMoreComprehensive": "MT4 memberikan peluang analisis yang lebih komprehensif. Setiap produk perdagangan dapat menampilkan sembilan kerangka waktu, memungkinkan pedagang untuk melihat dinamika harga secara rinci. Gabungkan alat-alat ini untuk menentukan tren pasar, dan kemampuan analisis yang kuat membantu Anda menganalisis tren pasar secara lebih menyeluruh dan menangkap momen terbaik.",
   "safeAndConvenient": "Aman dan nyaman",
-  "advancedTradingAndAnalysisFunctions": "Fungsi perdagangan dan analisis tingkat lanjut， antarmuka pengguna yang ramah， dapat membantu Anda memahami semua fungsi dan aturan operasi dengan mudah。 Memenuhi standar keamanan tertinggi。 Pertukaran data antara terminal klien dan server platform sepenuhnya dienkripsi， sehingga akun perdagangan Anda dilindungi paling aman.",
+  "advancedTradingAndAnalysisFunctions": "Fungsi perdagangan dan analisis tingkat lanjut, antarmuka pengguna yang ramah, dapat membantu Anda memahami semua fungsi dan aturan operasi dengan mudah. Memenuhi standar keamanan tertinggi. Pertukaran data antara terminal klien dan server platform sepenuhnya dienkripsi, sehingga akun perdagangan Anda dilindungi paling aman.",
   "MT4APPVersion": "Versi APLIKASI MT4 (Android / iOS)",
-  "weProvideTheMT4MobileApplication": "Kami menyediakan aplikasi seluler MT4， selama Anda mengunduh dan menginstal APLIKASI MT4 di ponsel atau komputer tablet Anda， Anda dapat dengan mudah berdagang kapan saja， di mana saja。 MT4 iOS dan Android APP menyediakan antarmuka operasi yang lebih sederhana， yang dapat memantau tren pasar dengan lebih nyaman dan cepat， dan menikmati pengalaman perdagangan yang luar biasa。 Tidak hanya itu asisten harian Anda， tetapi juga alat Anda yang tak tergantikan.",
+  "weProvideTheMT4MobileApplication": "Kami menyediakan aplikasi seluler MT4, selama Anda mengunduh dan menginstal APLIKASI MT4 di ponsel atau komputer tablet Anda, Anda dapat dengan mudah berdagang kapan saja, di mana saja. MT4 iOS dan Android APP menyediakan antarmuka operasi yang lebih sederhana, yang dapat memantau tren pasar dengan lebih nyaman dan cepat, dan menikmati pengalaman perdagangan yang luar biasa. Tidak hanya itu asisten harian Anda, tetapi juga alat Anda yang tak tergantikan.",
   "MetaTrader4MobileApp": "Aplikasi seluler MetaTrader4",
-  "downloadOurMT4MobileAppNow": "Unduh aplikasi seluler MT4 kami sekarang dan jadikan itu mitra dagang Anda， membantu Anda memasuki pasar keuangan kapan saja， di mana saja， dan raih setiap peluang perdagangan 24 jam sehari.",
+  "downloadOurMT4MobileAppNow": "Unduh aplikasi seluler MT4 kami sekarang dan jadikan itu mitra dagang Anda, membantu Anda memasuki pasar keuangan kapan saja, di mana saja, dan raih setiap peluang perdagangan 24 jam sehari.",
   "downloadTheIOSVersion": "Unduh versi iOS",
   "downloadTheAndroidVersion": "Unduh versi Android",
   "MAMMultiAccountManagementSystem": "Sistem manajemen multi-akun MAM",
-  "theMultiAccountManagementSystem": "Sistem Manajemen Multi-Akun (MAM) memiliki fungsi manajemen terintegrasi yang penting， memungkinkan manajer aset untuk mengelola banyak akun hanya melalui satu antarmuka。 Sebuah antarmuka tunggal memungkinkan manajer aset untuk secara efektif dan akurat mengkonfigurasi kondisi perdagangan untuk beberapa akun pribadi， dan secara merata mendistribusikan kondisi dan strategi perdagangan yang sama ke akun individu sesuai dengan rasio yang telah ditetapkan， membantu Anda mengelola aktivitas perdagangan dan meningkatkan keterampilan manajemen.",
+  "theMultiAccountManagementSystem": "Sistem Manajemen Multi-Akun (MAM) memiliki fungsi manajemen terintegrasi yang penting, memungkinkan manajer aset untuk mengelola banyak akun hanya melalui satu antarmuka. Sebuah antarmuka tunggal memungkinkan manajer aset untuk secara efektif dan akurat mengkonfigurasi kondisi perdagangan untuk beberapa akun pribadi, dan secara merata mendistribusikan kondisi dan strategi perdagangan yang sama ke akun individu sesuai dengan rasio yang telah ditetapkan, membantu Anda mengelola aktivitas perdagangan dan meningkatkan keterampilan manajemen.",
   "consultCustomerServiceImmediately": "Konsultasi layanan pelanggan segera",
   "MAMAccountSupportsFiveDistributionLogics": "Akun MAM mendukung lima logika distribusi",
-  "theMAMSystemProvidesMultipleRatioSettings": "Sistem MAM menyediakan beberapa pengaturan rasio。 Anda dapat memilih paket yang paling sesuai dengan kebutuhan Anda， dan mengizinkan pelanggan menggunakan lima modul berbeda untuk mengalokasikan item perdagangan dan mengeksekusi semua jenis pesanan umum pada saat yang bersamaan.",
+  "theMAMSystemProvidesMultipleRatioSettings": "Sistem MAM menyediakan beberapa pengaturan rasio. Anda dapat memilih paket yang paling sesuai dengan kebutuhan Anda, dan mengizinkan pelanggan menggunakan lima modul berbeda untuk mengalokasikan item perdagangan dan mengeksekusi semua jenis pesanan umum pada saat yang bersamaan.",
   "accountNetValueIsAllocatedAccordingToProportion": "Nilai bersih akun dialokasikan sesuai proporsi",
   "percentageAllocation": "Alokasi persentase",
   "balanceIsAllocatedAccordingToProportion": "Saldo dialokasikan sesuai proporsi",
@@ -76,11 +76,11 @@
   "compatibleWithAll": "Kompatibel dengan semua pesanan MT4, misalnya, stop loss, harga batas, dll.",
   "thereIsNoLimit": "Tidak ada batasan jumlah akun saat melakukan pemesanan.",
   "yourPartnerToTheRoadOfSuccess": "Mitra Anda menuju jalan kesuksesan",
-  "toProvideYouWithFlexibleAndCompetitiveRates": "Untuk memberi Anda harga yang fleksibel dan bersaing， pengaturan cepat， dan dukungan berkelanjutan tingkat tinggi， sistem MAM juga menyediakan daftar semua informasi yang Anda butuhkan termasuk perdagangan yang beredar， saldo， untung dan rugi， informasi kontak pelanggan， dll.",
+  "toProvideYouWithFlexibleAndCompetitiveRates": "Untuk memberi Anda harga yang fleksibel dan bersaing, pengaturan cepat, dan dukungan berkelanjutan tingkat tinggi, sistem MAM juga menyediakan daftar semua informasi yang Anda butuhkan termasuk perdagangan yang beredar, saldo, untung dan rugi, informasi kontak pelanggan, dll.",
   "transparentCommissionDetails": "Sekilas tentang detail komisi yang transparan",
-  "realTimeDisplay": "Tampilan real-time dari akun utama dan detail sub-akun， termasuk keuntungan， komisi， bunga rollover， saldo dan tingkat margin.",
+  "realTimeDisplay": "Tampilan real-time dari akun utama dan detail sub-akun, termasuk keuntungan, komisi, bunga rollover, saldo dan tingkat margin.",
   "convenientAndFastExecution": "Eksekusi yang nyaman dan cepat",
-  "allTransactionOrders": "Semua order transaksi dieksekusi melalui akun utama， dan kemudian ditransfer ke sub-akun sesuai dengan metode konfigurasi yang Anda pilih.",
+  "allTransactionOrders": "Semua order transaksi dieksekusi melalui akun utama, dan kemudian ditransfer ke sub-akun sesuai dengan metode konfigurasi yang Anda pilih.",
   "AMustHaveSystem": "Sistem yang harus dimiliki untuk memperkenalkan broker",
-  "multilingualTradingPlatform": "Platform perdagangan multibahasa dan materi pemasaran， likuiditas yang baik， eksekusi yang andal， akun tidak terbatas dapat dibuka， memungkinkan Anda menjadi broker profesional."
+  "multilingualTradingPlatform": "Platform perdagangan multibahasa dan materi pemasaran, likuiditas yang baik, eksekusi yang andal, akun tidak terbatas dapat dibuka, memungkinkan Anda menjadi broker profesional."
 }
