--- a/src/i18n/locales/in/marketNews.json
+++ b/src/i18n/locales/in/marketNews.json
@@ -1,5 +1,5 @@
 {
-  "economicCalendar": "Kalender ekonomi tentang pasar valuta asing dan berita dunia， diterbitkan harian dan mingguan",
+  "economicCalendar": "Kalender ekonomi tentang pasar valuta asing dan berita dunia, diterbitkan harian dan mingguan",
   "weeklyForeignExchangeNews": "Berita valuta asing mingguan dari WCG dan indikator ekonomi dunia yang komprehensif",
   "financialCalendar": "Kalender Keuangan",
   "financialNews": "Berita keuangan",
@@ -7,6 +7,6 @@
   "todaysEconomic": "Berita ekonomi hari ini",
   "theMostImportant": "Berita ekonomi dan keuangan terpenting yang terkait dengan mata uang internasional dan pasar saham",
   "theLatestReview": "Review terbaru dari analisis pasar dan berita",
-  "theLatestReviewsAndForecasts": "Ulasan dan prakiraan terbaru dari semua alat pasar dan berita ekonomi。 Materi ini disediakan oleh analis profesional dan tidak digunakan untuk panduan langsung.",
+  "theLatestReviewsAndForecasts": "Ulasan dan prakiraan terbaru dari semua alat pasar dan berita ekonomi. Materi ini disediakan oleh analis profesional dan tidak digunakan untuk panduan langsung.",
   "more": "Muat lebih banyak"
 }
