--- a/src/i18n/locales/ms/marketNews.json
+++ b/src/i18n/locales/ms/marketNews.json
@@ -1,5 +1,5 @@
 {
-  "economicCalendar": "Kalendar ekonomi mengenai pasaran pertukaran asing dan berita dunia， diterbitkan pada setiap hari dan mingguan",
+  "economicCalendar": "Kalendar ekonomi mengenai pasaran pertukaran asing dan berita dunia, diterbitkan pada setiap hari dan mingguan",
   "weeklyForeignExchangeNews": "Berita pertukaran asing mingguan dari WCG dan petunjuk ekonomi dunia yang komprehensif",
   "financialCalendar": "Kalendar Kewangan",
   "financialNews": "Berita kewangan",
