--- a/src/i18n/locales/vi/platform.json
+++ b/src/i18n/locales/vi/platform.json
@@ -7,50 +7,50 @@
   "diversifiedInvestmentTransactions": "Giao dịch đầu tư đa dạng",
   "theBestWayToManageRisk": "Cách tốt nhất để quản lý rủi ro là đa dạng hóa đầu tư. Trong nền tảng giao dịch MT4 của WCG, bạn có thể chọn từ một loạt các sản phẩm và thị trường giao dịch để củng cố và đa dạng hóa khoản đầu tư của mình.",
   "intuitiveAndEasyToUse": "Trực quan và dễ sử dụng",
-  "completeAndComprehensiveReports": "Các báo cáo đầy đủ và toàn diện， chẳng hạn như số theo dõi， giá mở cửa， khối lượng giao dịch， trạng thái tài khoản của tất cả các lệnh và thông tin toàn diện về các vị trí， có thể được cung cấp trong cửa sổ đầu cuối。 Bạn có thể xem thông tin thị trường theo thời gian thực mọi lúc， mọi nơi để hỗ trợ bạn đưa ra các quyết định giao dịch hợp lý。 Nhiều hỗ trợ hơn cho giao dịch thông minh (EA) và hệ thống kiểm tra lại chiến lược， để cung cấp cho bạn mức độ linh hoạt cao trong giao dịch， giám sát và kiểm soát。",
+  "completeAndComprehensiveReports": "Các báo cáo đầy đủ và toàn diện, chẳng hạn như số theo dõi, giá mở cửa, khối lượng giao dịch, trạng thái tài khoản của tất cả các lệnh và thông tin toàn diện về các vị trí, có thể được cung cấp trong cửa sổ đầu cuối. Bạn có thể xem thông tin thị trường theo thời gian thực mọi lúc, mọi nơi để hỗ trợ bạn đưa ra các quyết định giao dịch hợp lý. Nhiều hỗ trợ hơn cho giao dịch thông minh (EA) và hệ thống kiểm tra lại chiến lược, để cung cấp cho bạn mức độ linh hoạt cao trong giao dịch, giám sát và kiểm soát.",
   "automaticAdaptabilityAndScalability": "Khả năng thích ứng và khả năng mở rộng tự động",
-  "throughTheFurtherDevelopment": "Thông qua việc phát triển thêm chương trình API， WCG MT4 có thể được tích hợp hoàn hảo với thiết bị giao dịch hiện có của bạn。 Cho dù bạn ở bất kỳ nơi nào trên thế giới， bạn luôn có thể truy cập vào nền tảng giao dịch của mình để tùy chỉnh các chỉ số， thực hiện hướng dẫn và thực hiện giao dịch。 ， Đặt giá giới hạn， lệnh cắt lỗ và theo dõi xu hướng thị trường để đảm bảo rằng bạn sẽ không bỏ lỡ bất kỳ cơ hội giao dịch nào và thông tin thị trường quan trọng ngay cả khi bạn đang ở bên ngoài。",
+  "throughTheFurtherDevelopment": "Thông qua việc phát triển thêm chương trình API, WCG MT4 có thể được tích hợp hoàn hảo với thiết bị giao dịch hiện có của bạn. Cho dù bạn ở bất kỳ nơi nào trên thế giới, bạn luôn có thể truy cập vào nền tảng giao dịch của mình để tùy chỉnh các chỉ số, thực hiện hướng dẫn và thực hiện giao dịch. , Đặt giá giới hạn, lệnh cắt lỗ và theo dõi xu hướng thị trường để đảm bảo rằng bạn sẽ không bỏ lỡ bất kỳ cơ hội giao dịch nào và thông tin thị trường quan trọng ngay cả khi bạn đang ở bên ngoài.",
   "downloadWCGMT4TradingPlatform": "Tải xuống nền tảng giao dịch WCG MT4",
-  "leadingTradingAndNetworkTechnology": "Công nghệ mạng và giao dịch hàng đầu， với tất cả các công cụ bạn cần， mang lại cho bạn trải nghiệm giao dịch tốt nhất",
+  "leadingTradingAndNetworkTechnology": "Công nghệ mạng và giao dịch hàng đầu, với tất cả các công cụ bạn cần, mang lại cho bạn trải nghiệm giao dịch tốt nhất",
   "forPC": "MT4 cho máy tính",
   "forMac": "MT4 dành cho Mac",
   "multiAccountManagementSystem": "Hệ thống quản lý đa tài khoản MT4",
   "forIPhone": "MT4 dành cho iPhone",
   "forAndroid": "MT4 dành cho Android",
   "MT4PcVersion": "MT4 phiên bản cho máy tính",
-  "MetaTrader4IsTheMostPopular": "MetaTrader 4 là nền tảng giao dịch trực tuyến phổ biến nhất thế giới và đã thiết lập vị trí hàng đầu trong ngành trong nhiều năm。 MetaTrader 4 (MT4) được thiết kế đặc biệt cho các giao dịch ngoại hối và giao dịch tương lai。 Nhà giao dịch có thể phân tích xu hướng thị trường， vẽ biểu đồ giao dịch và quản lý các vị trí cũng như lệnh của họ thông qua giao diện người dùng trực quan và các chức năng hoàn chỉnh。",
+  "MetaTrader4IsTheMostPopular": "MetaTrader 4 là nền tảng giao dịch trực tuyến phổ biến nhất thế giới và đã thiết lập vị trí hàng đầu trong ngành trong nhiều năm. MetaTrader 4 (MT4) được thiết kế đặc biệt cho các giao dịch ngoại hối và giao dịch tương lai. Nhà giao dịch có thể phân tích xu hướng thị trường, vẽ biểu đồ giao dịch và quản lý các vị trí cũng như lệnh của họ thông qua giao diện người dùng trực quan và các chức năng hoàn chỉnh.",
   "downloadImmediately": "Tải xuống ngay lập tức",
   "comprehensiveTechnicalAnalysisFunction": "Chức năng phân tích kỹ thuật toàn diện",
-  "professionalIconFunctions": "Các chức năng biểu tượng chuyên nghiệp， chỉ báo giao dịch， giao dịch thông minh (EA)， v.v.， có thể được áp dụng cho tất cả các nhà giao dịch với các cấp độ kinh nghiệm khác nhau。 Cho phép bạn cập nhật những phát triển mới nhất về thị trường ký quỹ và hợp đồng ngoại hối toàn cầu (CFD)， đồng thời thực hiện các giao dịch chuyên nghiệp mọi lúc， mọi nơi thông qua WCG MT4。",
+  "professionalIconFunctions": "Các chức năng biểu tượng chuyên nghiệp, chỉ báo giao dịch, giao dịch thông minh (EA), v.v., có thể được áp dụng cho tất cả các nhà giao dịch với các cấp độ kinh nghiệm khác nhau. Cho phép bạn cập nhật những phát triển mới nhất về thị trường ký quỹ và hợp đồng ngoại hối toàn cầu (CFD), đồng thời thực hiện các giao dịch chuyên nghiệp mọi lúc, mọi nơi thông qua WCG MT4.",
   "automaticChartingRecords": "Bản ghi biểu đồ tự động",
   "selfDefinedTechnicalIndicators": "Các chỉ số kỹ thuật tự xác định",
   "supportMultipleWindows": "Hỗ trợ nhiều cửa sổ",
   "simpleChartingOperation": "Hoạt động biểu đồ đơn giản",
   "nineChartingTimePeriods": "Chín khoảng thời gian biểu đồ",
   "whyChoose": "Tại sao lại chọn nền tảng MetaTrader 4?",
-  "MT4IsTheMostPopularForeign": "MT4 là nền tảng giao dịch ngoại hối phổ biến nhất trên thế giới。",
-  "itHasWonVariousAwards": "Nó đã giành được nhiều giải thưởng khác nhau。 Nền tảng này có 3 loại biểu đồ khác nhau， 9 khoảng thời gian， 39 ngôn ngữ",
+  "MT4IsTheMostPopularForeign": "MT4 là nền tảng giao dịch ngoại hối phổ biến nhất trên thế giới.",
+  "itHasWonVariousAwards": "Nó đã giành được nhiều giải thưởng khác nhau. Nền tảng này có 3 loại biểu đồ khác nhau, 9 khoảng thời gian, 39 ngôn ngữ",
   "moreThan50Preset": "hơn 50 chỉ báo kỹ thuật đặt trước và giao diện hoàn toàn có thể tùy chỉnh",
-  "aNumberOfTradingProducts": "Một số sản phẩm giao dịch có thể được giao dịch。",
+  "aNumberOfTradingProducts": "Một số sản phẩm giao dịch có thể được giao dịch.",
   "compatibleWithExpertAdvisors": "ương thích với Expert Advisors (chương trình giao dịch tự động thông minh)",
-  "itHasAMobileVersion": "các chỉ báo tùy chỉnh và các công cụ ứng dụng khác。 Nó có một phiên bản di động của nền tảng giao dịch。 Bạn có thể sử dụng APP di động để giao dịch và quản lý đơn hàng mọi lúc， mọi nơi",
+  "itHasAMobileVersion": "các chỉ báo tùy chỉnh và các công cụ ứng dụng khác. Nó có một phiên bản di động của nền tảng giao dịch. Bạn có thể sử dụng APP di động để giao dịch và quản lý đơn hàng mọi lúc, mọi nơi",
   "provideAnAdvanced": "Cung cấp hệ thống tín hiệu thông báo tiên tiến",
   "downloadTheWCGMT4": "Tải xuống nền tảng giao dịch MT4 WCG",
-  "usingMT4AllowsYou": "Sử dụng MT4 cho phép bạn theo dõi thị trường chính xác hơn， quản lý các vị trí của mình nhanh chóng và hiệu quả， tối ưu hóa chiến lược giao dịch nâng cao lợi thế giao dịch của bạn và tận hưởng trải nghiệm giao dịch hoàn hảo。",
+  "usingMT4AllowsYou": "Sử dụng MT4 cho phép bạn theo dõi thị trường chính xác hơn, quản lý các vị trí của mình nhanh chóng và hiệu quả, tối ưu hóa chiến lược giao dịch nâng cao lợi thế giao dịch của bạn và tận hưởng trải nghiệm giao dịch hoàn hảo.",
   "tradingSystem": "Hệ thống thương mạ",
-  "includesCurrentPriceExecution": "Bao gồm thực hiện giá hiện tại， giao dịch theo cả hai hướng， bốn loại lệnh chờ và hai lệnh cắt lỗ và chức năng cắt lỗ theo dõi。 Chức năng giao dịch một cú nhấp chuột cho phép bạn gửi các lệnh giao dịch trực tiếp từ biểu đồ với một cú nhấp chuột。 Biểu đồ báo giá tích hợp cung cấp một cách chính xác để đánh giá thời gian của giao dịch。",
+  "includesCurrentPriceExecution": "Bao gồm thực hiện giá hiện tại, giao dịch theo cả hai hướng, bốn loại lệnh chờ và hai lệnh cắt lỗ và chức năng cắt lỗ theo dõi. Chức năng giao dịch một cú nhấp chuột cho phép bạn gửi các lệnh giao dịch trực tiếp từ biểu đồ với một cú nhấp chuột. Biểu đồ báo giá tích hợp cung cấp một cách chính xác để đánh giá thời gian của giao dịch.",
   "technicalAnalysis": "Phân tích kỹ thuật",
-  "MT4ProvidesAMoreComprehensive": "MT4 cung cấp cơ hội phân tích toàn diện hơn。 Mỗi sản phẩm giao dịch có thể hiển thị chín khung thời gian， cho phép các nhà giao dịch xem các động thái giá chi tiết。 Kết hợp các công cụ này để xác định xu hướng thị trường， và khả năng phân tích mạnh mẽ giúp bạn phân tích xu hướng thị trường kỹ lưỡng hơn và nắm bắt thời điểm tốt nhất。",
+  "MT4ProvidesAMoreComprehensive": "MT4 cung cấp cơ hội phân tích toàn diện hơn. Mỗi sản phẩm giao dịch có thể hiển thị chín khung thời gian, cho phép các nhà giao dịch xem các động thái giá chi tiết. Kết hợp các công cụ này để xác định xu hướng thị trường, và khả năng phân tích mạnh mẽ giúp bạn phân tích xu hướng thị trường kỹ lưỡng hơn và nắm bắt thời điểm tốt nhất.",
   "safeAndConvenient": "An toàn và tiện lợi",
-  "advancedTradingAndAnalysisFunctions": "Chức năng giao dịch và phân tích nâng cao， giao diện người dùng thân thiện， có thể giúp bạn dễ dàng hiểu tất cả các chức năng và quy tắc hoạt động。 Đáp ứng các tiêu chuẩn an toàn cao nhất。 Việc trao đổi dữ liệu giữa thiết bị đầu cuối của khách hàng và máy chủ của nền tảng được mã hóa hoàn toàn， để tài khoản giao dịch của bạn được bảo vệ an toàn nhất。",
+  "advancedTradingAndAnalysisFunctions": "Chức năng giao dịch và phân tích nâng cao, giao diện người dùng thân thiện, có thể giúp bạn dễ dàng hiểu tất cả các chức năng và quy tắc hoạt động. Đáp ứng các tiêu chuẩn an toàn cao nhất. Việc trao đổi dữ liệu giữa thiết bị đầu cuối của khách hàng và máy chủ của nền tảng được mã hóa hoàn toàn, để tài khoản giao dịch của bạn được bảo vệ an toàn nhất.",
   "MT4APPVersion": "Phiên bản MT4 APP (Android / iOS)",
-  "weProvideTheMT4MobileApplication": "Chúng tôi cung cấp ứng dụng di động MT4， chỉ cần bạn tải và cài đặt ứng dụng MT4 trên điện thoại di động hoặc máy tính bảng là bạn có thể dễ dàng giao dịch mọi lúc， mọi nơi。 MT4 iOS và Android APP cung cấp giao diện hoạt động đơn giản hơn， có thể theo dõi xu hướng thị trường thuận tiện và nhanh chóng hơn， đồng thời tận hưởng trải nghiệm giao dịch tuyệt vời。 Nó không chỉ là trợ lý hàng ngày của bạn mà còn là công cụ không thể thay thế của bạn。",
+  "weProvideTheMT4MobileApplication": "Chúng tôi cung cấp ứng dụng di động MT4, chỉ cần bạn tải và cài đặt ứng dụng MT4 trên điện thoại di động hoặc máy tính bảng là bạn có thể dễ dàng giao dịch mọi lúc, mọi nơi. MT4 iOS và Android APP cung cấp giao diện hoạt động đơn giản hơn, có thể theo dõi xu hướng thị trường thuận tiện và nhanh chóng hơn, đồng thời tận hưởng trải nghiệm giao dịch tuyệt vời. Nó không chỉ là trợ lý hàng ngày của bạn mà còn là công cụ không thể thay thế của bạn.",
   "MetaTrader4MobileApp": "MetaTrader4 ứng dụng di động",
-  "downloadOurMT4MobileAppNow": "Tải xuống ứng dụng di động MT4 của chúng tôi ngay bây giờ và để nó trở thành đối tác thương mại của bạn， giúp bạn tham gia thị trường tài chính mọi lúc mọi nơi và nắm bắt mọi cơ hội giao dịch 24 giờ một ngày。",
+  "downloadOurMT4MobileAppNow": "Tải xuống ứng dụng di động MT4 của chúng tôi ngay bây giờ và để nó trở thành đối tác thương mại của bạn, giúp bạn tham gia thị trường tài chính mọi lúc mọi nơi và nắm bắt mọi cơ hội giao dịch 24 giờ một ngày.",
   "downloadTheIOSVersion": "Tải xuống phiên bản iOS",
   "downloadTheAndroidVersion": "Tải xuống phiên bản Android",
   "MAMMultiAccountManagementSystem": "Hệ thống quản lý đa tài khoản MAM",
-  "theMultiAccountManagementSystem": "Hệ thống quản lý đa tài khoản (MAM) có các chức năng quản lý tích hợp quan trọng， cho phép người quản lý tài sản quản lý nhiều tài khoản chỉ thông qua một giao diện。 Một giao diện duy nhất cho phép người quản lý tài sản định cấu hình hiệu quả và chính xác các điều kiện giao dịch cho nhiều tài khoản cá nhân， đồng thời phân phối đồng đều các điều kiện và chiến lược giao dịch giống nhau cho các tài khoản cá nhân theo tỷ lệ đặt trước， giúp bạn quản lý các hoạt động giao dịch và cải thiện kỹ năng quản lý。",
+  "theMultiAccountManagementSystem": "Hệ thống quản lý đa tài khoản (MAM) có các chức năng quản lý tích hợp quan trọng, cho phép người quản lý tài sản quản lý nhiều tài khoản chỉ thông qua một giao diện. Một giao diện duy nhất cho phép người quản lý tài sản định cấu hình hiệu quả và chính xác các điều kiện giao dịch cho nhiều tài khoản cá nhân, đồng thời phân phối đồng đều các điều kiện và chiến lược giao dịch giống nhau cho các tài khoản cá nhân theo tỷ lệ đặt trước, giúp bạn quản lý các hoạt động giao dịch và cải thiện kỹ năng quản lý.",
   "consultCustomerServiceImmediately": "Xin mời dịch vụ khách hàng",
   "MAMAccountSupportsFiveDistributionLogics": "Tài khoản MAM hỗ trợ năm logic phân phối",
   "theMAMSystemProvidesMultipleRatioSettings": "Hệ thống MAM cung cấp nhiều cài đặt tỷ lệ. Bạn có thể chọn kế hoạch phù hợp nhất theo nhu cầu của mình và cho phép khách hàng sử dụng năm mô-đun khác nhau để phân bổ các mặt hàng giao dịch và thực hiện tất cả các loại lệnh thông thường cùng một lúc.",
