--- a/src/i18n/locales/ar/conditions.json
+++ b/src/i18n/locales/ar/conditions.json
@@ -31,18 +31,18 @@
   "companyInformation": "معلومات الشركة",
   "WCGInternational": "WCG Markets Ltd",
   "disputeSettlement": "تسوية المنازعات",
-  "weWelcomeYourInvaluableComments": "نحن نرحب بتعليقاتك التي لا تقدر بثمن. إذا خطر ببالك أي شيء يمكن أن يحسن خدماتنا ، فيرجى إخبارنا بذلك. سواء كانت اقتراحًا أو مجاملة أو شكوى ، فإن ملاحظاتك هي المفتاح لتحسين منتجاتنا وخدماتنا.",
+  "weWelcomeYourInvaluableComments": "نحن نرحب بتعليقاتكم القيمة. وإذا خطر ببالكم أي شيء يمكن أن يحسن من خدماتنا، الرجاء إعلامنا بذلك. وبغض النظر عما إذا كان إقتراحاً أو إطراء أو شكوى، فإن ملاحظاتكم هي مفتاح تحسين منتجاتنا وخدماتنا.",
   "ifYouNeedAnyAssistance": "للحصول على المساعدة ، يرجى الاتصال بموظفي خدمة العملاء عبر الإنترنت على مدار 24 ساعة",
   "orEmailUs": "أو تفضل بإرسال تعليقاتك إلينا",
-  "makeASuggestion": "قدم اقتراح",
+  "makeASuggestion": "قدم إقتراح",
   "weUnderstandThatEven": "نحن ندرك أنه حتى المؤسسات الراسخة سترتكب أخطاء. إذا كانت لديك شكوى ، فيرجى إخبارنا وإتاحة الفرصة لنا لحل هذه المشكلات. سنحقق في المشكلة ونجيب عن أسئلتك ونبذل قصارى جهدنا لاستعادة ثقتك بنا.",
   "toAssistUsInHelpingYou": "لمساعدتنا في مساعدتك ، نوصيك باتباع عملية بسيطة من خمس خطوات:",
   "collectMaterials": "جمع المواد",
-  "forCurrentTrades": "بالنسبة للصفقات الحالية ، يرجى الاتصال بغرفة التداول لدينا ؛ للصفقات السابقة أو الأمور الأخرى ، يرجى الاتصال بموظفي خدمة العملاء لدينا.",
+  "forCurrentTrades": "بالنسبة للصفقات الحالية، يرجى الاتصال بغرفة التداول الخاصة بشركتنا؛ أما للتداولات السابقة أو الأمور الأخرى، فيرجى الاتصال بموظفي خدمة العملاء لدى شركتنا.",
   "transferTo": "التحويل إلى الإدارة العليا",
-  "contactOurComplianceDepartment": "اتصل بقسم الامتثال والتدقيق الداخلي ومشرف إدارة المخاطر",
-  "collectAllTheSupportingMaterials": "اجمع كل المواد الداعمة المتعلقة بالشكوى ، وفكر في الأسئلة التي تطلب منا الإجابة عليها وكيف نعتقد أننا يجب أن نقرر.",
-  "thenIfTheQuestionRelates": "ثم ، إذا كان السؤال يتعلق بالتداولات الحالية أو الحديثة ، يرجى الاتصال بغرفة التداول الخاصة بنا مباشرة. يرجى تذكر أنه يجب عليك الاتصال بنا في أقرب وقت ممكن ، وسوف يمنحنا الفرصة لمساعدتك في حل المشكلة بأبسط وأسرع طريقة. إذا كانت المشكلة تتعلق بمعاملة حدثت في الماضي ، فقد يكون الاتصال بمسؤول خدمة العملاء هو أفضل طريقة. سيقوم موظفونا بمراجعة الموقف بشكل شامل وحل هذه المشكلات في أقرب وقت ممكن.",
+  "contactOurComplianceDepartment": "إتصل بقسم الامتثال لدى شركتنا - التدقيق الداخلي ومشرف إدارة المخاطر",
+  "collectAllTheSupportingMaterials": "إجمع كل المواد الداعمة المتعلقة بالشكوى وفكر بالأسئلة التي تتطلب منا الإجابة عليها وكيف نعتقد أننا يجب أن نقرر.",
+  "thenIfTheQuestionRelates": "إذا كان السؤال يتعلق بصفقات حالية أو حديثة， يرجى الاتصال بغرفة التداول الخاصة بشركتنا مباشرة. تذكر دائماً أنه يجب عليك الإتصال بنا في أقرب وقت ممكن، مما يتيح لنا الفرصة لمساعدتك في حل المشكلة بأبسط وأسرع طريقة. ",
   "ifAtThisStage": "إذا لم يتم حل المشكلة في هذه المرحلة أو لا يمكن التعامل معها بشكل مرض ، يرجى مطالبة الشخص المسؤول بإبلاغ الإدارة العليا بالمسألة. سنزودك باسم وتفاصيل الاتصال الخاصة بالشخص المسؤول عن التحقيق في شكواك. سنمنح الشخص المسؤول السلطة اللازمة لمراجعة حالتك.",
   "ifTheProblem": "إذا تعذر حل المشكلة ، فيمكنك التفكير في إبلاغ المشرف على الامتثال والتدقيق الداخلي وإدارة المخاطر. سيقوم المشرف بإجراء فحص مستقل والاتصال بك مباشرة.",
   "emailTo": "إرسال بريد إلكتروني إلى:",
