style(i18n): update i18n ar

--- a/src/i18n/locales/ar/notice.json
+++ b/src/i18n/locales/ar/notice.json
@@ -26,7 +26,7 @@
   "inAnyCase": "في أي حال ، يحتاج المتداولون إلى هامش كافٍ للحفاظ على المراكز المفتوحة. لا تقدم WCG إشعارًا باستدعاء الهامش. على سبيل المثال ، قبل عطلات نهاية الأسبوع والعطلات ، عندما يكون مستوى الهامش أقل من 100٪ من الهامش المطلوب ، يحق لـ WCG الاستجابة لتقلبات السوق أو وفقًا للوضع الحالي. وفقًا لاحتياجات الظروف الفردية ، سيتم إغلاق جميع مراكز العميل (التحوط).",
   "setTheValidityPeriodOfTheOrder": "حدد فترة صلاحية الطلب",
   "allPendingOrders": "جميع الأوامر المعلقة وإعدادات وقف الخسارة والربح صالحة لمدة أسبوع واحد. قبل إغلاق عطلة نهاية الأسبوع ، سيتم إلغاء جميع الأوامر المعلقة وإعدادات وقف الخسارة أو الربح غير المنفذة. إذا لزم الأمر ، يمكن للعملاء إعادة تعيين الإعدادات بعد فتح السوق يوم الاثنين.",
-  "forcedLiquidationPolicy": "سياسة التصفية القسرية",
-  "pleaseNoteThatUnlessWeHaveOtherNotice": "يرجى ملاحظة أنه ما لم يكن لدينا إشعار آخر ، فإن مستوى هامش تصفية WCG هو 30٪. عندما تكون نسبة الهامش لديك أقل من 30٪ ، يقوم النظام تلقائيًا بإغلاق طلبك. يرجى الانتباه دائمًا إلى مستوى الأموال في الحساب لتجنب الخسائر غير الضرورية.",
-  "theCalculationMethod": "طريقة حساب نسبة الهامش هي: القيمة الصافية ÷ الدفعة المقدمة المستخدمة = نسبة الهامش"
+  "forcedLiquidationPolicy": "شرط التصفية الإجبارية",
+  "pleaseNoteThatUnlessWeHaveOtherNotice": "يرجى ملاحظة أنه ما لم يتم الإخطار بخلاف ذلك، فإن مستوى هامش تصفية WCG هو 30٪. عندما تكون نسبة الهامش أقل من 30٪، يقوم النظام تلقائيًا بإغلاق طلبك. يرجى الانتباه دائمًا إلى مستوى الأموال في رصيد الحساب لتجنب الخسائر غير الضرورية.",
+  "theCalculationMethod": "طريقة حساب نسبة الهامش هي: صافي مبلغ الرصيد ÷ الهامش المستخدم = نسبة الهامش"
 }
