--- a/src/i18n/locales/ms/products.json
+++ b/src/i18n/locales/ms/products.json
@@ -7,16 +7,16 @@
   "index": "Indeks",
   "uSShareCFD": "CFD Saham AS",
   "cryptocurrencies": "Cryptocurrency",
-  "product": "Produk",
-  "name": "Nama",
-  "lotRange": "Julat Lot (Min / Maksimum)",
-  "contractUnit": "Unit Kontrak",
-  "standardPoint": "Setiap titik standard",
-  "leverage": "Perkadaran Leverage",
-  "basicMargin": "Margin Asas",
-  "marginCloseout": "Penutupan Margin",
-  "openingTime": "Waktu Pembukaan (Isnin)",
-  "closingTime": "Waktu Tutup (Jumaat)",
+  "product": "Product",
+  "name": "Name",
+  "lotRange": "Lot Range (Min/Max)",
+  "contractUnit": "Contract Unit",
+  "standardPoint": "Per standard point",
+  "leverage": "Leverage Proportion",
+  "basicMargin": "Basic Margin",
+  "marginCloseout": "Margin Closeout",
+  "openingTime": "Opening Time (Mon)",
+  "closingTime": "Closing Time (Fri)",
   "ounce": "ounce",
   "barrels": "barrels",
   "share": "share",
