--- a/src/i18n/locales/vi/products.json
+++ b/src/i18n/locales/vi/products.json
@@ -7,16 +7,16 @@
   "index": "Mục lục",
   "uSShareCFD": "CFD cổ phiếu Hoa Kỳ",
   "cryptocurrencies": "Tiền điện tử",
-  "product": "Sản phẩm",
-  "name": "Tên",
-  "lotRange": "Phạm vi lô (Tối thiểu / Tối đa)",
-  "contractUnit": "Đơn vị hợp đồng",
-  "standardPoint": "Mỗi điểm tiêu chuẩn",
-  "leverage": "Tỷ lệ đòn bẩy",
-  "basicMargin": "Ký quỹ cơ bản",
-  "marginCloseout": "Kết thúc ký quỹ",
-  "openingTime": "Thời gian mở cửa (Thứ Hai)",
-  "closingTime": "Giờ đóng cửa (Thứ sáu)",
+  "product": "Product",
+  "name": "Name",
+  "lotRange": "Lot Range (Min/Max)",
+  "contractUnit": "Contract Unit",
+  "standardPoint": "Per standard point",
+  "leverage": "Leverage Proportion",
+  "basicMargin": "Basic Margin",
+  "marginCloseout": "Margin Closeout",
+  "openingTime": "Opening Time (Mon)",
+  "closingTime": "Closing Time (Fri)",
   "ounce": "ounce",
   "barrels": "barrels",
   "share": "share",
