--- a/src/i18n/locales/ms/home.json
+++ b/src/i18n/locales/ms/home.json
@@ -18,7 +18,9 @@
   "brandReputation": "Reputasi jenama dan pasukan perkhidmatan pelanggan yang diketuai oleh tutor pasaran terkenal",
   "WCGValuesTheCustomersTradingExperience": "Dengan lesen perniagaan formal di pasaran kewangan antarabangsa, yang dilindungi oleh undang-undang Hong Kong, China dan peraturan antarabangsa St.Vincent. Ini adalah Internet \"broker logam berharga yang paling dipercayai untuk pelabur\".",
   "preciousMetalsContract": "Kontrak Logam Berharga",
-  "timesLeverage": "100-200 kali leverage, kos rendah dan pulangan tinggi, perdagangan 24 jam global, dapat memperoleh keuntungan dengan membeli dan menjual. London Gold & London Silver adalah produk perdagangan yang disediakan oleh International Financial Futures Exchange, dengan peraturan perdagangan yang mudah, operasi T + 0, waktu penyelesaian dana pendek, dan transaksi elektronik dalam talian yang cepat dan selamat.",
+  "timesLeverage": "100-200 kali leverage, kos rendah dan pulangan tinggi, perdagangan 24 jam global, dapat memperoleh keuntungan dengan membeli dan menjual.",
+  "LondonGoldLondonSilver": "London Gold & London Silver adalah produk perdagangan yang disediakan oleh International Financial Futures Exchange, dengan peraturan perdagangan yang mudah, operasi T + 0.",
+  "shortFundSettlementTime": "Waktu penyelesaian dana pendek, dan transaksi elektronik dalam talian yang cepat dan selamat.",
   "accountOpening": "Pembukaan Akaun",
   "realTimeQuotation": "Petikan masa nyata produk perdagangan kami",
   "aVarietyOfProfessional": "Pelbagai alat analisis carta profesional dan petunjuk teknikal. Anda boleh menetapkan parameter dan jangka masa penunjuk teknikal anda secara bebas.",
