--- a/src/i18n/locales/vi/home.json
+++ b/src/i18n/locales/vi/home.json
@@ -18,7 +18,9 @@
   "brandReputation": "Danh tiếng thương hiệu và mối quan hệ đôi bên cùng có lợi",
   "WCGValuesTheCustomersTradingExperience": "WCG coi trọng trải nghiệm giao dịch của khách hàng và tin tưởng chắc chắn rằng sự phát triển trong tương lai của thương hiệu phụ thuộc vào sự phát triển chung của các đối tác.",
   "preciousMetalsContract": "Hợp đồng kim loại quý",
-  "timesLeverage": "Đòn bẩy 100-200 lần, chi phí thấp và lợi nhuận cao, giao dịch toàn cầu trong 24 giờ, có thể kiếm lợi nhuận bằng cách mua và bán. London Gold & London Silver là sản phẩm giao dịch được cung cấp bởi International Financial Futures Exchange, với các quy tắc giao dịch đơn giản, hoạt động T + 0, thời gian giải quyết quỹ ngắn và giao dịch điện tử trực tuyến nhanh chóng và an toàn.",
+  "timesLeverage": "Đòn bẩy 100-200 lần, chi phí thấp và lợi nhuận cao, giao dịch toàn cầu trong 24 giờ, có thể kiếm lợi nhuận bằng cách mua và bán.",
+  "LondonGoldLondonSilver": "London Gold & London Silver là sản phẩm giao dịch được cung cấp bởi International Financial Futures Exchange, với các quy tắc giao dịch đơn giản, hoạt động T + 0.",
+  "shortFundSettlementTime": "Thời gian giải quyết quỹ ngắn và giao dịch điện tử trực tuyến nhanh chóng và an toàn.",
   "accountOpening": "Mở tài khoản",
   "realTimeQuotation": "Báo giá thời gian thực của các sản phẩm giao dịch",
   "aVarietyOfProfessional": "Một loạt các công cụ phân tích biểu đồ chuyên nghiệp và các chỉ báo kỹ thuật. Bạn có thể tự do thiết lập các thông số chỉ báo kỹ thuật và khung thời gian của riêng mình.",
