--- a/src/i18n/locales/ar/home.json
+++ b/src/i18n/locales/ar/home.json
@@ -18,7 +18,9 @@
   "brandReputation": "سمعة العلامة التجارية والعلاقة المربحة للجانبين",
   "WCGValuesTheCustomersTradingExperience": "تقدر شركة  WCG تجربة تداول العميل معها وتعتقد إعتقاداً راسخاً أن التطوير المستقبلي للعلامة التجارية يعتمد على النمو المشترك لشركائها.",
   "preciousMetalsContract": "عقود المعادن الثمينة",
-  "timesLeverage": ".بفضل الرافعة المالية التي تتراوح قيمتها ما بين 100 الى 200 مرة، والتداول العالمي منخفض التكلفة وذو العائد المرتفع على مدار 24 ساعة، يمكنك تحقيق الربح عن طريق الشراء والبيع. إن London Gold & London Silver. هو منتج تداول مقدم من البورصة المالية الدولية للعقود الآجلة، مع قواعد تداول بسيطة، وعملية T+0 ، ووقت قصير لتسوية الأموال، ومعاملات إلكترونية سريعة وآمنة عبر الإنترنت",
+  "timesLeverage": "يمكن أن تكون الرافعة المالية 100-200 مرة ، والتداول العالمي على مدار 24 ساعة ، ومنخفضة التكلفة وعالية العائد ، والشراء والشراء لأعلى ، أمرًا مربحًا",
+  "LondonGoldLondonSilver": "London Gold & London Silver هو منتج تداول مقدم من البورصة المالية الدولية للعقود الآجلة ، مع قواعد تداول بسيطة وعملية T + 0",
+  "shortFundSettlementTime": "وقت قصير لتسوية الأموال ، معاملات إلكترونية سريعة وآمنة",
   "accountOpening": "فتح الحساب",
   "realTimeQuotation": "عرض أسعار فوري في الوقت الفعلي لمنتجاتنا التجارية",
   "aVarietyOfProfessional": "مجموعة متنوعة من الأدوات الاحترافية لتحليل الرسوم البيانية والمؤشرات الفنية. يمكنك تعيين معلمات المؤشر الفني والإطار الزمني الخاصة بك بحرية",
