style(about): add i18n about, some part of about page

--- a/src/i18n/locales/ar/conditions.json
+++ b/src/i18n/locales/ar/conditions.json
@@ -42,7 +42,7 @@
   "transferTo": "التحويل إلى الإدارة العليا",
   "contactOurComplianceDepartment": "إتصل بقسم الامتثال لدى شركتنا - التدقيق الداخلي ومشرف إدارة المخاطر",
   "collectAllTheSupportingMaterials": "إجمع كل المواد الداعمة المتعلقة بالشكوى وفكر بالأسئلة التي تتطلب منا الإجابة عليها وكيف نعتقد أننا يجب أن نقرر.",
-  "thenIfTheQuestionRelates": "إذا كان السؤال يتعلق بصفقات حالية أو حديثة， يرجى الاتصال بغرفة التداول الخاصة بشركتنا مباشرة. تذكر دائماً أنه يجب عليك الإتصال بنا في أقرب وقت ممكن، مما يتيح لنا الفرصة لمساعدتك في حل المشكلة بأبسط وأسرع طريقة. ",
+  "thenIfTheQuestionRelates": "إذا كان السؤال يتعلق بصفقات حالية أو حديثة, يرجى الاتصال بغرفة التداول الخاصة بشركتنا مباشرة. تذكر دائماً أنه يجب عليك الإتصال بنا في أقرب وقت ممكن، مما يتيح لنا الفرصة لمساعدتك في حل المشكلة بأبسط وأسرع طريقة. ",
   "ifAtThisStage": "إذا لم يتم حل المشكلة في هذه المرحلة أو لا يمكن التعامل معها بشكل مرض ، يرجى مطالبة الشخص المسؤول بإبلاغ الإدارة العليا بالمسألة. سنزودك باسم وتفاصيل الاتصال الخاصة بالشخص المسؤول عن التحقيق في شكواك. سنمنح الشخص المسؤول السلطة اللازمة لمراجعة حالتك.",
   "ifTheProblem": "إذا تعذر حل المشكلة ، فيمكنك التفكير في إبلاغ المشرف على الامتثال والتدقيق الداخلي وإدارة المخاطر. سيقوم المشرف بإجراء فحص مستقل والاتصال بك مباشرة.",
   "emailTo": "إرسال بريد إلكتروني إلى:",
