style(about): part of about page

--- a/src/i18n/locales/ar/header.json
+++ b/src/i18n/locales/ar/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "مسؤولية الشركة",
   "questions": "الأسئلة المتكررة",
   "announcements": "تصريحات",
+  "aboutUs": "معلومات عنا",
   "contactUs": "اتصل بنا",
   "products": "منتجات التداول",
   "viewTradingProducts": "عرض منتجات التداول",
