--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "企业责任",
   "questions": "常见问题",
   "announcements": "平台公告",
+  "aboutUs": "关于我们",
   "contactUs": "联系我们",
   "products": "交易产品",
   "viewTradingProducts": "查看交易产品",
