--- a/src/i18n/locales/en/header.json
+++ b/src/i18n/locales/en/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "Corporate Responsibility",
   "questions": "Questions",
   "announcements": "Announcements",
+  "aboutUs": "About Us",
   "contactUs": "Contact Us",
   "products": "Products",
   "viewTradingProducts": "View Trading Products",
