--- a/src/i18n/locales/in/header.json
+++ b/src/i18n/locales/in/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "Tanggung jawab perusahaan",
   "questions": "Berita perusahaan",
   "announcements": "Pengumuman",
+  "aboutUs": "Tentang kami",
   "contactUs": "Hubungi kami",
   "products": "Produk",
   "viewTradingProducts": "Lihat produk perdagangan",
