--- a/src/i18n/locales/ms/header.json
+++ b/src/i18n/locales/ms/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "Tanggungjawab korporat",
   "questions": "Soalan lazim",
   "announcements": "Pengumuman",
+  "aboutUs": "Tentang Kita",
   "contactUs": "Hubungi kami",
   "products": "Produk",
   "viewTradingProducts": "Lihat produk perdagangan",
