--- a/src/i18n/locales/vi/header.json
+++ b/src/i18n/locales/vi/header.json
@@ -5,6 +5,7 @@
   "corporateResponsibility": "Cùng chịu trách nhiệm",
   "questions": "Vấn đề thường",
   "announcements": "Thông báo của",
+  "aboutUs": "về chúng tôi",
   "contactUs": "Liên hệ chúng",
   "products": "Sản phẩm",
   "viewTradingProducts": "Xem các sản phẩm giao dịch",
