style(abnormaltrade): fix wording

--- a/src/i18n/locales/cn/notice.json
+++ b/src/i18n/locales/cn/notice.json
@@ -14,7 +14,7 @@
   "handlingMethod": "处理方法",
   "ifTheAccount": "如经本公司调查后，发现帐号在进行异常交易，本公司会马上冻结该帐号的交易和资金进出再作深入调查。",
   "ifTheAccountIs": "如确认该帐号在进行异常交易，本公司会把该帐号注销，并把帐户的剩余资金发还客户，任何因异常交易所产生的利润和佣金不发放。",
-  "theRightToInterpret": "异常交易的解释权归文传国际有限公司所有，如有任何争议，一切以文传国际之决定为最终裁决。",
+  "theRightToInterpret": "异常交易的解释权归WCG所有，如有任何争议，一切以WCG之决定为最终裁决。",
   "tradeDetails": "交易细则",
   "sourceOfTradeExecution": "执行来源",
   "theQuotesOfOur": "我们的报价一般来自全球精选顶级银行向我们提供的大量最及时的报价，我们相信这种方式将始终为您提供最优可行价格。",
