--- a/src/i18n/locales/en/notice.json
+++ b/src/i18n/locales/en/notice.json
@@ -14,7 +14,7 @@
   "handlingMethod": "Handling method",
   "ifTheAccount": "If the account is confirmed to be trading with abnormal transactions, the company will freeze the account immediately, all deposits and withdrawals will be prohibited until investigation is done.",
   "ifTheAccountIs": "If the account is confirmed to be with abnormal transactions, the company will close the account and return the remaining funds to the customer, any profits and commissions arising from abnormal transactions will be canceled.",
-  "theRightToInterpret": "The right to interpret “abnormal transaction” is owned by WCG Markets Ltd. and if there is any dispute, WCG Markets Ltd reserves the right to modify.",
+  "theRightToInterpret": "The right to interpret “abnormal transaction” is owned by WCG, and if there is any dispute, WCG  reserves the right to modify.",
   "tradeDetails": "Trade Details",
   "sourceOfTradeExecution": "Source Of Trade Execution",
   "theQuotesOfOur": "The quotes of our products generally come from a number of the world's top Banks that offer us substantial and most timely prices for the market. We firmly believe that this approach will always provide you with the best available price.",
