--- a/src/i18n/locales/zh/notice.json
+++ b/src/i18n/locales/zh/notice.json
@@ -14,7 +14,7 @@
   "handlingMethod": "處理方法",
   "ifTheAccount": "如經本公司調查後，发現帳號在進行異常交易，本公司會馬上凍結該帳號的交易和資金進出再作深入調查。",
   "ifTheAccountIs": "如確認該帳號在進行異常交易，本公司會把該帳號注銷，並把帳戶的剩余資金发還客戶，任何因異常交易所產生的利潤和傭金不发放。",
-  "theRightToInterpret": "異常交易的解釋權歸文傳國際有限公司所有，如有任何爭議，一切以文傳國際之決定為最終裁決。",
+  "theRightToInterpret": "異常交易的解釋權歸WCG所有，如有任何爭議，一切以WCG之決定為最終裁決。",
   "tradeDetails": "交易細則",
   "sourceOfTradeExecution": "執行來源",
   "theQuotesOfOur": "我們的報價一般來自全球精選頂級銀行向我們提供的大量最及時的報價，我們相信這種方式將始終為您提供最優可行價格。",
