style(all): refactor codes

--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "市场分析",
   "partner": "成为伙伴",
   "fundManager": "基金经理",
-  "iBBroker": "IB代理商",
+  "introducingBroker": "IB代理商",
   "regionalRepresentative": "区域代表",
   "whiteLabelCooperation": "白标合作"
 }
