--- a/src/i18n/locales/en/header.json
+++ b/src/i18n/locales/en/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "Market Analysis",
   "partner": "Partner",
   "fundManager": "Fund Manager",
-  "iBBroker": "IB Broker",
+  "introducingBroker": "IB Broker",
   "regionalRepresentative": "Regional Representative",
   "whiteLabelCooperation": "White Label Cooperation"
 }
