--- a/src/i18n/locales/id/header.json
+++ b/src/i18n/locales/id/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "Analisis Pasar",
   "partner": "Rekan",
   "fundManager": "Manajer Investasi",
-  "iBBroker": "Introducing Broker/ IB",
+  "introducingBroker": "Introducing Broker/ IB",
   "regionalRepresentative": "Perwakilan daerah",
   "whiteLabelCooperation": "Kerjasama white label"
 }
