--- a/src/i18n/locales/ms/header.json
+++ b/src/i18n/locales/ms/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "Analisa Pasaran",
   "partner": "IB",
   "fundManager": "Pengurus dana",
-  "iBBroker": "IB Introducing Broker",
+  "introducingBroker": "IB Introducing Broker",
   "regionalRepresentative": "Wakil daerah",
   "whiteLabelCooperation": "White label cooperation"
 }
