--- a/src/i18n/locales/vi/header.json
+++ b/src/i18n/locales/vi/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "Phân tích thị",
   "partner": "Đối tác",
   "fundManager": "Quản lý quỹ",
-  "iBBroker": "Đại lý IB",
+  "introducingBroker": "Đại lý IB",
   "regionalRepresentative": "Đại diện khu",
   "whiteLabelCooperation": "Hợp tác nhãn"
 }
