--- a/src/i18n/locales/ar/header.json
+++ b/src/i18n/locales/ar/header.json
@@ -33,7 +33,7 @@
   "marketAnalysis": "تحليل السوق",
   "partner": "كن شريكا",
   "fundManager": "دير صندوق استثماري",
-  "iBBroker": "الوسيط المُعرّف (IB)",
+  "introducingBroker": "الوسيط المُعرّف (IB)",
   "regionalRepresentative": "الممثل الإقليمي",
   "whiteLabelCooperation": "شراكة البطاقة البيضاء"
 }
